# j-ent-resource-radar

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SKILL.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: ADDING_AN_ARTIST.md  METHODOLOGY.md
examples/: example-report.md  findings.example.json
prompts/: check_artist_resources_zh.md
src/jent_resource_radar/: __init__.py  cli.py  io_utils.py  models.py  planner.py  queries.py  report.py
tests/: test_models.py  test_queries.py  test_report.py
watchlists/: example_generic.json
