[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "jent-resource-radar"
version = "0.1.0"
description = "A receipts-first public-source research workflow for Japanese entertainment resources."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Technical Fangirl"}
]
keywords = ["j-entertainment", "osint", "research", "fandom", "media-monitoring"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]

[project.scripts]
jent-radar = "jent_resource_radar.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
